# ros2-bbox-juice-spout-gazebo

./: .gitignore  .gitmodules
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/camera_calibration_parsers/lib/camera_calibration_parsers/: convert
install/camera_calibration_parsers/share/camera_calibration_parsers/: package.sh
install/camera_calibration_parsers/share/camera_calibration_parsers/cmake/: ament_cmake_export_dependencies-extras.cmake
install/camera_info_manager/share/camera_info_manager/: package.sh
install/camera_info_manager/share/camera_info_manager/cmake/: camera_info_managerConfig.cmake
install/cv_bridge/include/cv_bridge/: cv_bridge_export.h
install/cv_bridge/share/cv_bridge/: package.sh
install/cv_bridge/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
install/dcb_gazebo/share/dcb_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dcb_gazebo/share/dcb_gazebo/cmake/: ament_cmake_export_dependencies-extras.cmake  dcb_gazeboConfig.cmake
install/dcb_gazebo/share/dcb_gazebo/launch/: dcb.launch.py
install/gazebo_dev/share/gazebo_dev/: local_setup.sh  package.ps1  package.sh
install/gazebo_msgs/share/gazebo_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/gazebo_msgs/share/gazebo_msgs/cmake/: gazebo_msgsConfig.cmake  rosidl_cmake-extras.cmake
install/gazebo_plugins/share/gazebo_plugins/: package.bash  package.ps1  package.sh  package.zsh
install/gazebo_plugins/share/gazebo_plugins/cmake/: ament_cmake_export_libraries-extras.cmake  gazebo_pluginsConfig.cmake
install/gazebo_plugins/share/gazebo_plugins/environment/: gazebo_plugins.sh
install/gazebo_ros/share/gazebo_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_ros/share/gazebo_ros/cmake/: gazebo_rosConfig.cmake
install/gazebo_ros_pkgs/share/gazebo_ros_pkgs/: package.bash  package.ps1  package.sh  package.zsh
install/gazebo_ros_pkgs/share/gazebo_ros_pkgs/cmake/: gazebo_ros_pkgsConfig.cmake
install/image_geometry/share/image_geometry/: package.sh
install/image_transport/lib/image_transport/: list_transports  republish
install/image_transport/share/image_transport/: local_setup.sh  package.sh
install/image_transport/share/image_transport/cmake/: ament_cmake_export_dependencies-extras.cmake
install/juice_dcb/lib/juice_dcb/: juice_dcb
install/juice_dcb/share/juice_dcb/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/juice_dcb/share/juice_dcb/cmake/: juice_dcbConfig.cmake
install/juice_dcb_msgs/include/juice_dcb_msgs/msg/: command_result.hpp  command_result__functions.h  command_result__rosidl_typesupport_fastrtps_cpp.hpp  command_result__rosidl_typesupport_introspection_c.h  command_result__struct.h  command_result__struct.hpp  command_result__traits.hpp  command_result__type_support.cpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/juice_dcb_msgs/include/juice_dcb_msgs/srv/: set_pouring.h  set_pouring.hpp  set_pouring__type_support.cpp
install/juice_dcb_msgs/share/juice_dcb_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/juice_dcb_msgs/share/juice_dcb_msgs/cmake/: juice_dcb_msgsConfig.cmake
install/juice_dcb_msgs/share/juice_dcb_msgs/msg/: CommandResult.idl
install/juice_dcb_msgs/share/juice_dcb_msgs/srv/: SetPouring.idl  SetPouring.srv
install/juice_spout/lib/juice_spout/: juice_spout
install/juice_spout/share/juice_spout/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/juice_spout/share/juice_spout/cmake/: juice_spoutConfig.cmake
install/juice_spout_msgs/include/juice_spout_msgs/action/: run_action_recipe.hpp  run_action_recipe__rosidl_typesupport_fastrtps_c.h  run_action_recipe__struct.hpp  run_action_recipe__traits.hpp  run_action_recipe__type_support.c  run_action_recipe__type_support.cpp
install/juice_spout_msgs/include/juice_spout_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  spout_state.h  spout_state.hpp  spout_state__rosidl_typesupport_fastrtps_cpp.hpp  spout_state__rosidl_typesupport_introspection_c.h  spout_state__type_support.c  spout_state__type_support.h
install/juice_spout_msgs/include/juice_spout_msgs/srv/: run_recipe.h  run_recipe.hpp  run_recipe__functions.c  run_recipe__functions.h  (+9 more)
install/juice_spout_msgs/share/juice_spout_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nourish_dcb/include/nourish_dcb/: coms.hpp
install/nourish_dcb/share/nourish_dcb/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nourish_robot_arm_msgs/share/nourish_robot_arm_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nourish_scale/lib/nourish_scale/: scale
install/nourish_scale/share/nourish_scale/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nourish_scale_msgs/share/nourish_scale_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_tests/lib/opencv_tests/: broadcast  rosfacedetect  source
install/opencv_tests/share/opencv_tests/: package.sh
install/serial/share/serial/: package.sh
install/vision_opencv/share/vision_opencv/: package.sh
log/: latest_build
src/dcb_gazebo/: CMakeLists.txt  package.xml
src/dcb_gazebo/launch/log/: latest_build
src/dcb_gazebo/log/: latest_build
src/dcb_gazebo/models/dolly/: model.sdf
src/dcb_gazebo/worlds/: bbox.world  dolly_casual_female.world  package.xml
src/dcb_plugin/: CMakeLists.txt  package.xml
src/dcb_plugin/include/: juice_spout_color.hpp
src/dcb_plugin/src/: juice_spout_color.cpp
(+157 files in other folders)
